fixed whitespace text node

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ main {
 .banner {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 85vh;
   align-items: center;
   justify-content: center;
 }
